update visual for header icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <!-- Logo Section -->
             <div class="flex items-center">
                 <div class="flex items-center">
-                    <button id="in-header-btn" class="p-2 mr-8 rounded-full hover:bg-gray-100" onclick="toggleSideNav()"><img src="./assets/img/menu-01.png" alt="menu" class="w-6 h-6"></button>
+                    <button id="in-header-btn" class="p-2 mr-4 rounded-full hover:bg-gray-100 -ml-2" onclick="toggleSideNav()"><img src="./assets/img/menu-01.png" alt="menu" class="w-6 h-6"></button>
                     <img src="/assets/img/Logo.png" alt="ingram micro logo" class="w-[246px] h-[32px] flex flex-col">
                 </div>
             </div>
@@ -332,7 +332,7 @@
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-lg font-bold  text-gray-25">Interaction Setting</h2>
                 <button id="close-menu-btn" class=" w-8 h-8 flex justify-center items-center p-2 bg-gray-800 text-white rounded-full hover:bg-gray-700">X</button>
-                <button id="open-menu-btn" class="hidden absolute top-0 right-0 w-12 h-12 bg-gray-700 text-white rounded-full flex items-center justify-center">
+                <button id="open-menu-btn" class="hidden absolute top-0 right-0 w-12 h-12 bg-gray-700 text-white rounded-full items-center justify-center">
                     <img src="/assets/img/setting.png" alt="Settings" class="w-6 h-6">
                 </button>
             </div>
