--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/tailwind.css">
 </head>
 <body class="pt-[72px] h-screen">
-    <header class="fixed top-0 w-full h-[72px] bg-white border-b border-gray-200 flex items-center">
-        <div class="w-full h-18 px-8 flex justify-between items-center">
+    <header class="fixed top-0 w-full h-[72px] bg-white border-b border-gray-200 flex items-center z-50">
+        <div class="w-full h-18 px-8 flex justify-between items-center ">
             <!-- Logo Section -->
             <div class="flex items-center">
                 <div class="flex items-center">
@@ -338,7 +338,7 @@
                 <span id="path-2" class="font-semibold text-[#364152] text-sm px-1 py-2">Business Health</span>
             </div>
             <h1 id="title" class="mt-2 text-xl font-semibold text-[#131313]">Business Health</h1>
-            <div class="w-full h-[700px] flex justify-center items-center mt-8 rounded-lg bg-[#F5F5F5] border-[#CCCCCC] border">
+            <div class="w-full flex justify-center items-center mt-8 rounded-lg bg-[#F5F5F5] border-[#CCCCCC] border" style="height: calc(100% - 104px);">
                 <p class="text-[#666666] text-lg font-normal">This is a placeholder</p>
             </div>
         </main>
