--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </header>
     <div class="flex w-full h-full">
-        <nav id="sideNav" class="bg-gray-50 text-gray-700 border-r border-gray-200 duration-300 h-full flex flex-col justify-between relative">
+        <nav id="sideNav" class="bg-gray-50 text-gray-700 border-r border-gray-200 duration-300 h-full flex-col justify-between relative">
             <div id="hover-area" class="absolute top-0 -right-4 h-full w-4"></div>
             <div id="naviation-top" class="pt-6 gap-2 h-full overflow-scroll w-full flex flex-col">
                 <button class="nav-item-primary gap-1 w-full flex pr-2 pl-1 active">
@@ -527,7 +527,6 @@
             }
 
             sideNav.style.display = 'flex';
-
             applyNavState();
 
             const designMenu = document.getElementById('design-menu');
