update icon & typo

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <button class="nav-item-primary accordion gap-1 w-full flex pr-2 pl-1">
                     <div class="nav-item-current bg-transparent w-1 h-10 rounded-full"></div>
                     <div class="nav-item-content px-3 py-2 gap-3 flex justify-center items-center h-fit w-full bg-transparent rounded-full">
-                        <img src="./assets/img/Sidebar navigation/credit-card-refresh.png" alt="Home" class="w-6 h-6 max-w-6">
+                        <img src="./assets/img/Sidebar navigation/headphones-01.png" alt="Home" class="w-6 h-6 max-w-6">
                         <div class="nav-item-text w-full text-gray-700 text-sm font-medium text-start">Customer Support</div>
                         <img src="./assets/img/chevron-down.png" alt="chevron" class="w-6 h-6 max-w-6 chevron-down">
                     </div>
@@ -273,14 +273,14 @@
                     <button class="nav-item-secondary gap-1 w-full flex pr-2 pl-1">
                         <div class="nav-item-current bg-transparent w-1 h-10 rounded-full"></div>
                         <div class="nav-item-content px-3 py-2 flex justify-center items-center h-fit w-full bg-transparent rounded-full">
-                            <div class="nav-item-text pl-9 w-full text-gray-700 text-sm font-medium text-start ">Suppor Tickets</div>
+                            <div class="nav-item-text pl-9 w-full text-gray-700 text-sm font-medium text-start ">Support Tickets</div>
                         </div>
                     </button>
                 </div>
                 <button class="nav-item-primary accordion gap-1 w-full flex pr-2 pl-1">
                     <div class="nav-item-current bg-transparent w-1 h-10 rounded-full"></div>
                     <div class="nav-item-content px-3 py-2 gap-3 flex justify-center items-center h-fit w-full bg-transparent rounded-full">
-                        <img src="./assets/img/Sidebar navigation/home-05.png" alt="Home" class="w-6 h-6 max-w-6">
+                        <img src="./assets/img/Sidebar navigation/credit-card-refresh.png" alt="Home" class="w-6 h-6 max-w-6">
                         <div class="nav-item-text w-full text-gray-700 text-sm font-medium text-start">Accounting</div>
                         <img src="./assets/img/chevron-down.png" alt="chevron" class="w-6 h-6 max-w-6 chevron-down">
                     </div>
