--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <!-- <button id="in-sidebar-btn" class="p-2 w-10 h-10 mx-2 rounded-full hover:bg-gray-100" onclick="toggleSideNav()"><img src="./assets/img/chevron-left-double.png" alt="menu" class="w-6 h-6"></button> -->
             </div>
             <button id="tag-btn" class="flex justify-center items-center w-8 h-9 absolute -right-8 bottom-6 rounded-r-2xl bg-gray-100 hover:bg-gray-200 border border-gray-200" onclick="toggleSideNav()"><img src="./assets/img/chevron-left.png" alt="menu" class="w-6 h-6 mr-1"></button>
-            <button id="fab" class=" flex justify-center items-center w-7 h-7 absolute -right-4 bottom-6 rounded-full bg-white hover:border-primary-700 border border-gray-200 shadow-sm hover:shadow-xl" onclick="toggleSideNav()"><img src="./assets/img/chevron-left.png" alt="menu" class="w-[16px] h-[16px]"></button>
+            <button id="fab" class=" flex justify-center items-center w-7 h-7 absolute -right-4 bottom-6 rounded-full bg-white hover:border-gray-700 border border-gray-200 shadow-sm hover:shadow-xl" onclick="toggleSideNav()"><img src="./assets/img/chevron-left.png" alt="menu" class="w-[16px] h-[16px]"></button>
 
         </nav>
         <main class="p-8 w-full full">
@@ -681,13 +681,13 @@
                         break;
                     case 'fabMiddle':
                         toggleSideNavButtons.fabMiddle.style.display = 'flex';
-                        toggleSideNavButtons.fabTop.classList.add('small-size');
+                        toggleSideNavButtons.fabTop.classList.remove('auto-hide');
                         toggleSideNavButtons.fabMiddle.style.top = '48%';
                         toggleSideNavButtons.fabBottom.style.bottom = 'auto';
                         break;
                     case 'fabBottom':
                         toggleSideNavButtons.fabBottom.style.display = 'flex';
-                        toggleSideNavButtons.fabTop.classList.add('small-size');
+                        toggleSideNavButtons.fabTop.classList.remove('auto-hide');
                         toggleSideNavButtons.fabMiddle.style.top = 'auto';
                         toggleSideNavButtons.fabBottom.style.bottom = '28px';
                         break;
