fixed a small bug

--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
             const closeMenuBtn = document.getElementById("close-menu-btn");
             const openMenuBtn = document.getElementById("open-menu-btn");
 
-            closeMenuBtn.addEventListener("click", function () {
-                menu.classList.add("menu-collapsed");
-            });
+            // closeMenuBtn.addEventListener("click", function () {
+            //     menu.classList.add("menu-collapsed");
+            // });
 
             openMenuBtn.addEventListener("click", function () {
                 menu.classList.remove("menu-collapsed");
